# rubic

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SPECIFICATION.md  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.playwright-mcp/: page-2026-07-08T23-06-38-287Z.yml
crates/app/: Cargo.toml  README.md  index.html
crates/app/src/: animation.rs  axis.rs  camera.rs  camera_scan.rs  cli.rs  colors.rs  cube_render.rs  game.rs  geometry.rs  input.rs  main.rs  mode.rs  net.rs  paint.rs  play.rs  solve.rs  touch.rs  types.rs  ui.rs  validation.rs
crates/app/src/vision/: capture.rs  classify.rs  color.rs  detect.rs  grid.rs  mod.rs  native.rs  pipeline.rs  sample.rs  source.rs  web_camera.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: cheatsheet.rs  color.rs  complete.rs  engine.rs  facelets.rs  lib.rs  moves.rs  state.rs
crates/core/src/solver/: beginner.rs  cube.rs  mod.rs  optimal.rs  search.rs
crates/core/tests/: beginner.rs  cheatsheet.rs  complete.rs  engine.rs  optimal.rs  validate.rs
docs/: README.md
docs/design/: 2026-07-07-foundation-cube-core.md  2026-07-08-camera-cube-input.md  2026-07-10-input-solve-ui-clarity.md
docs/specs/: 0001-visual-cube-input.md  0002-camera-cube-input.md  TEMPLATE.md  overview.md
docs/superpowers/specs/: 2026-07-07-foundation-cube-core-design.md
scripts/: deploy-web.sh
