[workspace]
resolver = "3"
members = ["crates/core", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mingjerli/rubic"
authors = ["Ming-Jer Li <mingjerli@gmail.com>"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
