[workspace]
resolver = "3"
members = ["crates/core", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mingjerli/rubic"
authors = ["Ming-Jer Li <mingjerli@gmail.com>"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Bevy is very slow in an unoptimized debug build. Optimize dependencies (Bevy,
# image, ...) fully even in dev so the app runs smoothly, while keeping our own
# crates lightly optimized for fast incremental recompiles.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Web/release build: optimize hard for binary size. The wasm blob is shipped to
# the browser, so size dominates. `wasm-opt -Oz` (see index.html) runs on top of
# this. `panic = "abort"` drops unwinding tables; `strip` removes symbols.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
