[package]
name = "rubic"
description = "Interactive Bevy GUI and CLI for solving a 3x3 Rubik's Cube."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rubiks", "cube", "solver", "bevy", "puzzle"]
categories = ["games", "visualization", "command-line-utilities"]

[[bin]]
name = "rubic"
path = "src/main.rs"

# NOTE: This crate deliberately does NOT enable `[lints] workspace = true`.
# The workspace enables `clippy::pedantic` at warn, which is extremely noisy in
# combination with Bevy's system-function signatures. Instead the crate root
# allows the relevant pedantic lints (see `src/main.rs`) and keeps the default
# `clippy::all` clean. `unsafe` remains forbidden (no `unsafe` is used).

[features]
default = []
# Camera cube input: the pure-Rust computer-vision core that reads a cube's
# colors from images (spec docs/specs/0002). Off by default so non-camera
# builds stay lean; Phase A adds only the `image` crate.
camera = ["dep:image"]

[dependencies]
bevy = "0.16"
# `version` (alongside `path`) is required so this crate can be published.
rubic-core = { path = "../core", version = "0.1.0", features = ["optimal"] }
clap = { version = "4", features = ["derive"] }
# Pure-Rust image buffers for the camera CV core (feature-gated). No format
# codecs needed: frames arrive as raw RGB.
image = { version = "0.25", optional = true, default-features = false }

# Web build: give `getrandom` a backend on wasm (see .cargo/config.toml).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
