[package]
name = "rubic"
description = "Interactive Bevy GUI and CLI for solving a 3x3 Rubik's Cube."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rubiks", "cube", "solver", "bevy", "puzzle"]
categories = ["games", "visualization", "command-line-utilities"]

[[bin]]
name = "rubic"
path = "src/main.rs"

# NOTE: This crate deliberately does NOT enable `[lints] workspace = true`.
# The workspace enables `clippy::pedantic` at warn, which is extremely noisy in
# combination with Bevy's system-function signatures. Instead the crate root
# allows the relevant pedantic lints (see `src/main.rs`) and keeps the default
# `clippy::all` clean. `unsafe` remains forbidden (no `unsafe` is used).

[features]
default = []
# Camera cube input: the pure-Rust computer-vision core that reads a cube's
# colors from images (spec docs/specs/0002). Off by default so non-camera
# builds stay lean; this adds only the `image` crate.
camera = ["dep:image", "dep:imageproc"]
# Native webcam frame source via `nokhwa` (desktop only). Kept separate from
# `camera` so the CV core and the WASM build never pull this heavier,
# platform-specific dependency.
camera-native = ["camera", "dep:nokhwa"]
# Browser webcam frame source via `getUserMedia` (web only). Pulls the wasm/JS
# interop crates; enable it in the WebAssembly build (see index.html).
camera-web = [
    "camera",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]

[dependencies]
bevy = "0.16"
# `version` (alongside `path`) is required so this crate can be published.
rubic-core = { path = "../core", version = "0.1.0", features = ["optimal"] }
clap = { version = "4", features = ["derive"] }
# Pure-Rust image buffers for the camera CV core (feature-gated). No format
# codecs needed: frames arrive as raw RGB.
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
# Computer-vision primitives for automatic cube-face detection (edges,
# contours, perspective warp). Pure Rust; wasm-compatible.
imageproc = { version = "0.25", optional = true, default-features = false }

# Native webcam source (desktop only; see the `camera-native` feature).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nokhwa = { version = "0.10", optional = true, features = ["input-native"] }

# Web build: give `getrandom` a backend on wasm (see .cargo/config.toml).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# Browser camera source (see the `camera-web` feature). Optional so the plain
# web build stays lean.
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
