[package]
name = "rubic-core"
description = "Pure-Rust 3x3 Rubik's Cube model, move engine, validation, and solvers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rubiks", "cube", "solver", "puzzle"]
categories = ["algorithms", "games"]

[lints]
workspace = true

[features]
# Enables the optimal (Kociemba two-phase) solver via the `kewb` crate.
# Off by default so the core stays dependency-light; the app turns it on.
optimal = ["dep:kewb"]

[dependencies]
kewb = { version = "0.4.3", optional = true }

[dev-dependencies]
